src/objects/ScoreCardQualityDelivery__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ScoreCardQualityDeliverys</relationshipLabel>
        <relationshipName>ScoreCardQualityDeliverys</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agility_Score__c</fullName>
        <label>Agility Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_Score__c</fullName>
        <label>Commitment Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defective_PPM_Score__c</fullName>
        <label>Defective PPM Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escaping_MCAR_Score__c</fullName>
        <label>Escaping MCAR Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L3_SubMetric_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L3 SubMetric Name</label>
        <referenceTo>SSC_L3SubMetric__c</referenceTo>
        <relationshipLabel>ScoreCardQualityDeliverys</relationshipLabel>
        <relationshipName>ScoreCardQualityDeliverys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Time_Score__c</fullName>
        <label>Lead Time Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Metric Name</label>
        <referenceTo>SSC_Metric__c</referenceTo>
        <relationshipLabel>ScoreCardQualityDeliverys</relationshipLabel>
        <relationshipName>ScoreCardQualityDeliverys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORacle_Customer_Number__c</fullName>
        <label>ORacle Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTD_Score__c</fullName>
        <label>OTD Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OracleCustNum__c</fullName>
        <formula>Account_Name__r.Oracle_Customer_Number__c</formula>
        <label>OracleCustNum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Capability_Score__c</fullName>
        <label>Quality Capability Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Metric_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Metric Name</label>
        <referenceTo>SSC_SubMetric__c</referenceTo>
        <relationshipLabel>ScoreCardQualityDeliverys</relationshipLabel>
        <relationshipName>ScoreCardQualityDeliverys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Score__c</fullName>
        <label>Supplier Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ScoreCardQualityDelivery</label>
    <nameField>
        <label>ScoreCardQualityDelivery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScoreCardQualityDeliverys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>